# inline

./: .dockerignore  .gitattributes  .gitignore  .oxlintignore  AGENTS.md  CLAUDE.md  CODEX.md  Cargo.toml  INLINE_CODE_SPEC.md  README.md  SUPPORT.md  bun.lockb  package.json  tsconfig.json
.agent-docs/: 2026-01-07-message-uploader-findings.md  2026-01-07-message-view-manual-layout-plan.md  2026-01-07-sync-review-findings.md  2026-01-08-code-review-findings.md  2026-01-08-macos-compose-attachments-draft-plan.md  2026-01-13-email-entities.md  2026-01-13-rich-text-entity-checklist.md  2026-01-14-chat-visibility-plan.md  2026-01-16-new-ui-sidebar-plan.md  2026-01-17-ui-toolbar-sidebar-changes.md  2026-01-20-sparkle-direct-distribution-plan.md  2026-01-21-sparkle-direct-distribution-final-checklist.md  2026-01-21-translation-entity-offset-fix.md  2026-01-22-build-warnings.md  2026-01-23-appkit-button-notes.md  2026-01-23-inline-code-background-macos.md  2026-01-25-realtime-v2-connection-manager-refactor.md  2026-01-26-inline-clawdbot-bridge-plan.md  2026-01-26-translation-settings-backend-sync.md  2026-01-28-new-thread-optimistic-findings.md  2026-01-29-chatstate-attachments-plan.md  2026-01-29-new-thread-options-analysis.md  2026-02-01-chat-rename-plan.md  2026-02-07-archive-mode-ux-fixes.md  2026-02-07-auth-rewrite-review-plan.md  2026-02-07-bots-sdk-and-updates-thread.md  2026-02-07-cli-ergonomics-json-mode-tests.md  2026-02-07-home-threads-support-and-move-wakawars.md  2026-02-07-ios-memory-background-jetsam-investigation.md  2026-02-07-ios-ui-per-space-compact-thread-archive.md  2026-02-07-macos-back-forward-navigation.md  2026-02-07-macos-forward-submenu-and-hover-actions.md  2026-02-07-macos-new-ui-polish-batch.md  2026-02-07-macos-non-bubble-message-view.md  2026-02-07-macos-rename-thread-title-ux.md  2026-02-07-macos-window-controls-hotkey-always-on-top-all-spaces.md  2026-02-07-multi-space-workflow-space-picker-move-thread.md  2026-02-07-new-thread-flow-polish-and-ai-title.md  2026-02-07-notes-todo-coverage-map.md  2026-02-07-search-across-everything-spec.md  (+62 more)
.claude/: settings.local.json
.claude/commands/: review-changes.md
.context/: 2026-01-07-ios-realtime-v2-connect-delay-findings.md  2026-01-14-macos-multiple-notifications-findings.md  2026-01-15-new-ui-context.md  2026-01-17-non-space-thread-step1.md  2026-01-17-unarchive-chat-on-receive.md  2026-01-20-admin-ui-v2-plan.md  2026-01-20-macos-new-ui-hint.md  2026-01-20-realtime-duplicate-notifications.md  2026-01-20-sparkle-direct-distribution-plan.md  2026-01-21-nudge-media-type-plan.md  2026-01-21-translation-entity-offset-fix.md  2026-01-23-create-thread-macos-plan.md  2026-01-23-telegram-voice-messages-notes.md  2026-01-26-home-threads-plan.md  2026-01-26-inline-clawdbot-bridge.md  2026-01-27-inline-clawdbot-bridge-expanded.md  2026-01-29-new-thread-plan-c.md  2026-01-29-sidebar-drop-attachments.md  2026-01-30-appkit-avatar-notes.md  2026-02-01-pending-transaction-refetch-spec.md  2026-02-01-pinned-messages-plan.md  2026-02-03-resumable-downloads-plan.md  2026-02-07-apple-concurrency-hotspots.md  2026-02-07-auth2-three-plans.md  2026-02-07-chat-open-perf-pagination-go-to-message.md  2026-02-07-cli-release-checklist.md  2026-02-07-codex-skills-90-10-prevent-tech-debt-lets-work-together.md  2026-02-07-compose-silent-send-toggle.md  2026-02-07-deep-links-space-thread-message.md  2026-02-07-in-app-alerts-replace-telegram.md  2026-02-07-ios-auto-logout-router-auth2-hotfix.md  2026-02-07-macos-avatar-and-media-flicker-fix-plan.md  2026-02-07-macos-launch-at-login-loading-ui.md  2026-02-07-macos-message-send-latency.md  2026-02-07-macos-reactions-toggle-and-resize-bugs.md  2026-02-07-macos-release-testflight-direct-distribution-checklist.md  2026-02-07-macos-save-media-wait-for-download.md  2026-02-07-macos-sidebar-initial-load-perf.md  2026-02-07-macos-toolbar-traffic-lights-background.md  2026-02-07-macos-updates-controller-progress-ui.md  (+105 more)
.context/memory/: macos-message-gesture-recognizer-actions.md
.github/: dependabot.yml
admin/: Dockerfile  index.html  package.json  serve.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
apple/: .swiftformat  Debug.xcconfig  Local.xcconfig  Release.xcconfig
ci_scripts/: ci_post_xcodebuild.sh
cli/: Cargo.toml  README.md  build.rs  install.sh  package.json
cli/skill/: SKILL.md
cli/src/: api.rs  attachments.rs  auth.rs  auth_flow.rs  chat_output.rs  client_info.rs  config.rs  dates.rs  doctor.rs  downloads.rs  errors.rs  identity.rs  main.rs  media.rs  message_export.rs  message_output.rs  message_selectors.rs  notifications.rs  output.rs  peer.rs  protocol.rs  query.rs  realtime.rs  state.rs  update.rs  validation.rs
cli/tests/: agent_json.rs  query_aliases_integration.rs
crates/client/: Cargo.toml  README.md
crates/client/src/: backend.rs  lib.rs  realtime.rs  runtime.rs  sdk_backend.rs  store.rs  sync.rs  types.rs
crates/protocol/: Cargo.toml  README.md  build.rs
crates/protocol/proto/: core.proto
crates/protocol/src/: lib.rs
crates/sdk/: Cargo.toml  README.md
crates/sdk/src/: api.rs  client_info.rs  lib.rs  realtime.rs
desktop/: package.json  tsconfig.json
docs/: hermes.md  inline-thread-mention-gating.md
hermes-agent/: .gitignore  README.md  RELEASE.md  package.json  tsconfig.json  vitest.config.ts
landing/: Dockerfile  package.json  postcss.config.cjs  tsconfig.json  vite.config.ts  vitest.config.ts
mcp/: .gitignore  Dockerfile  README.md  package.json  tsconfig.json  vitest.config.ts
openclaw/: AGENTS.md  README.md  openclaw.plugin.json  package.json  vitest.config.ts
proto/: client.proto  core.proto  server.proto
protos/: messages.proto
scripts/: cleanup-build-artifacts.ts  committer  docker-workspace-manifests.ts  package.json  release-cli.ts  tsconfig.json
sdk/: package.json  vitest.config.ts
server/: .env.sample  Dockerfile  drizzle.config.ts  package.json  tsconfig.base.json  tsconfig.json
web/: .gitignore  Dockerfile  package.json  tsconfig.json  vite.config.ts
website/: package.json  vite.config.ts
(+2006 files in other folders)
