[package]
name = "inline-cli"
version = "0.3.5"
edition = "2024"
build = "build.rs"
default-run = "inline"

[dependencies]
chrono = "0.4"
clap = { version = "4.5.60", features = ["derive"] }
dialoguer = "0.12.0"
futures-util = "0.3.32"
flate2 = "1.1.9"
hostname = "0.4.0"
mime_guess = "2.0.5"
prost = "0.14.3"
rand = "0.9.2"
regex = "1.12"
reqwest = { version = "0.12.12", default-features = false, features = [
  "json",
  "multipart",
  "rustls-tls",
  "stream",
] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
semver = "1.0.28"
thiserror = "2.0.17"
tar = "0.4.45"
tokio = { version = "1.51.0", features = [
  "fs",
  "io-util",
  "macros",
  "rt-multi-thread",
  "time",
] }
tokio-tungstenite = { version = "0.29.0", features = [
  "rustls-tls-native-roots",
] }
url = "2.5.8"
unicode-width = "0.2.2"
walkdir = "2.5.0"
zip = "8.5.0"

[build-dependencies]
prost-build = "0.14.3"

[[bin]]
name = "inline"
path = "src/main.rs"

[profile.release]
lto = "fat"
strip = "symbols"
codegen-units = 1

[profile.ci-test]
debug = 1
inherits = "test"
opt-level = 0
