[package]
name = "inline-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
build = false
default-run = "inline"
publish = false

[dependencies]
chrono = "0.4"
clap = { version = "4.5.23", features = ["derive"] }
dialoguer = "0.11.0"
futures-util = "0.3.30"
flate2 = "1.0.30"
inline-protocol = { path = "../crates/protocol" }
inline-sdk = { path = "../crates/sdk" }
mime_guess = "2.0.5"
rand = "0.8.5"
regex = "1.10"
reqwest = { version = "0.12.12", default-features = false, features = [
  "json",
  "multipart",
  "rustls-tls",
  "stream",
] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
sha2 = "0.10.8"
semver = "1.0.25"
thiserror = "1.0.69"
tar = "0.4.41"
tokio = { version = "1.43.0", features = [
  "fs",
  "io-util",
  "macros",
  "rt-multi-thread",
  "time",
] }
unicode-width = "0.1.11"
walkdir = "2.5.0"
zip = "0.6.6"

[[bin]]
name = "inline"
path = "src/main.rs"
