[package]
name = "inline-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Stateful Rust client foundation for Inline."
readme = "README.md"
keywords = ["inline", "chat", "client", "sdk"]
categories = ["api-bindings"]
documentation = "https://docs.rs/inline-client"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
futures-util.workspace = true
inline-sdk = { version = "0.5.4", path = "../sdk" }
log.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
prost.workspace = true
tokio-tungstenite.workspace = true
