[package]
name = "inline-sdk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Rust SDK for Inline API calls, uploads, and realtime RPC."
readme = "README.md"
keywords = ["inline", "chat", "sdk", "api", "realtime"]
categories = ["api-bindings", "web-programming::websocket"]
documentation = "https://docs.rs/inline-sdk"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
futures-util.workspace = true
hostname.workspace = true
inline-protocol = { version = "0.6.1", path = "../protocol" }
log.workspace = true
prost.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
url.workspace = true
